--- a/mandel.html
+++ b/mandel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Julia - Rust</title>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./mandel.js"></script>
   </head>
   <body>
     <canvas
@@ -12,5 +12,6 @@
       style="image-rendering: pixelated; image-rendering: crisp-edges; width: 100%;"
     >
     </canvas>
+    <p></p>
   </body>
 </html>
