--- a/mandel.html
+++ b/mandel.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Julia - Rust</title>
+    <title>Mandelbrot - Rust</title>
     <script type="module" src="./mandel.js"></script>
   </head>
   <body>
-    <canvas
-      width="1080"
-      height="1080"
-      style="image-rendering: pixelated; image-rendering: crisp-edges; width: 100%;"
-    >
-    </canvas>
-    <p></p>
+    <div style="text-align:center">
+      <canvas
+        width="800"
+        height="800"
+        style="image-rendering:pixelated;image-rendering:crisp-edges;width:800px;"
+      >
+      </canvas>
+    </div>
+    <p style="text-align:center"></p>
   </body>
 </html>
