--- a/mandel.html
+++ b/mandel.html
@@ -10,7 +10,7 @@
       <canvas
         width="800"
         height="800"
-        style="image-rendering:pixelated;image-rendering:crisp-edges;width:800px;"
+        style="image-rendering:pixelated;image-rendering:crisp-edges;width:800;"
       >
       </canvas>
     </div>
