--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <title>Julia - Rust</title>
     <script type="module" src="./julia.js"></script>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div style="text-align:center">
-      <button class="button" accesskey="p" style="border:none;height:28px;width:28px">⏸</button>
+    <div>
+      <button class="button" accesskey="p">⏸</button>
     </div>
-    <div style="text-align:center">
+    <div>
       <canvas
         width="400"
         height="400"
