--- a/mandel.html
+++ b/mandel.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <title>Mandelbrot - Rust</title>
     <script type="module" src="./mandel.js"></script>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div style="text-align:center">
+    <div>
       <canvas
         width="800"
         height="800"
-        style="image-rendering:pixelated;image-rendering:crisp-edges;width:800;"
       >
       </canvas>
     </div>
-    <p style="text-align:center"></p>
+    <p></p>
   </body>
 </html>
