add outline of mandelbrot set in background

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <div>
       <button class="button" accesskey="p">⏸</button>
     </div>
-    <div>
+    <div id="julia-canvas">
       <canvas
+        id="background"
         width="1024"
         height="768"
-      >
+        >
+      </canvas>
+      <canvas
+        id="foreground"
+        width="1024"
+        height="768"
+        >
       </canvas>
   </div>
   </body>
